# snakevise

./: .gitignore  .pre-commit-config.yaml  .pymarkdown.json  GEMINI.md  Makefile  README.md  pyproject.toml  requirements.txt  snakevise.py  vidseq.py
src/: __init__.py  config.py  constants.py  list_fonts.py  main.py  models.py  planner.py  renderer.py  utils.py
src/effects/: __init__.py
src/effects/subtitles/: __init__.py  blur.py  fadein.py  fadeout.py  flickering.py  jumping.py  moving.py  opacity.py  slidein.py  slideout.py  tilt.py
src/effects/video/: __init__.py  asciiart.py  autofix.py  blackwhite.py  blur.py  colorboost.py  colorshift.py  contrast.py  dataglitch.py  glitchchroma.py  glitchmotion.py  grain.py  grayscale.py  invert.py  mirror.py  newspaper.py  oldmovie.py  pixelize.py  posterize.py  reverse.py  sharpen.py  shutterecho.py  speed.py  stopmotion.py  terminal.py  tiles.py  tvscreen.py  zoomin.py  zoomout.py
src/presets/: __init__.py  chaos.py  lofi.py  subtle.py  urban.py  vintage.py
src/reframing/: __init__.py  duplicate.py  fill.py  slideover.py
tests/: test_config.py  test_crop.py  test_image_orientation.py  test_paths.py  test_planner.py  test_reverse.py  test_subtitle_config.py  test_subtitle_utils.py  test_subtitles.py  test_tiles_effect.py  test_vfx_order.py  test_vfx_validation.py
