[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snakevise"
version = "0.1.0"
description = "Python tool for processing video sequences"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3.0",
    "Operating System :: OS Independent",
]
dependencies = [
    "moviepy>=1.0.0,<2.0.0",
    "numpy>=1.17.3,<2.0.0",
    "Pillow>=8.0.0",
    "tqdm>=4.40.0",
    "argcomplete>=1.10.0"
]

[project.urls]
"Homepage" = "https://github.com/haschek/snakevise"
"Bug Tracker" = "https://github.com/haschek/snakevise/issues"

